--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "taskmybusiness",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gigison10.github.io/GoTask",
   "dependencies": {
-    "homepage": "https://gigison10.github.io/GoTask",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,8 +12,11 @@
     "google-auth-library": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
