--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 node_modules/.cache filter=lfs diff=lfs merge=lfs -text
+node_modules/.cache/default-development/* filter=lfs diff=lfs merge=lfs -text
