--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 node_modules/.cache filter=lfs diff=lfs merge=lfs -text
 node_modules/.cache/default-development/* filter=lfs diff=lfs merge=lfs -text
+D:/Coding/React/taskmybusiness/node_modules/.cache/default-development filter=lfs diff=lfs merge=lfs -text
