--- a/package.json
+++ b/package.json
@@ -8,17 +8,36 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "express": "^4.18.2",
     "firebase": "^9.21.0",
+    "firebase-admin": "^11.9.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "google-auth-library": "^8.8.0",
+    "graceful-fs": "^4.2.11",
+    "moment": "^2.29.4",
+    "nanoid": "^4.0.2",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +66,31 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
-  }
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "buffer": "^6.0.3",
+    "css-loader": "^6.8.1",
+    "gh-pages": "^5.0.0",
+    "https-browserify": "^1.0.0",
+    "net": "^1.0.2",
+    "querystring-es3": "^0.2.1",
+    "sass-loader": "^13.3.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.3",
+    "tls": "^0.0.1",
+    "url": "^0.11.1",
+    "util": "^0.12.5",
+    "webpack-cli": "^5.1.4"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "github.com/gigison10/GoTask"
+  },
+  "author": "",
+  "license": "ISC"
 }
