--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore node_modules directory
+/node_modules
 
 # dependencies
 /node_modules
